# ut-cs6300-assignment-03

./: .env.template  README.md  makefile  pyproject.toml  queries.json  results.json
src/: chromadb.py  create_queries.py  pinecone.py
